# face-landmark

./: .gitignore  CMakeLists.txt  README.md  build_wasm.sh
demo/wasm_app/: wasm_bindings.cpp
demo/wasm_app/web/: app.js  index.html  model-debug.html  roi-debug.html  serve.py
face_detector/header/: custom_face_detector.h
face_detector/src/: custom_face_detector.cc
include/: face_landmark.h  face_landmark_impl.h  landmark_tracker.h
lib/: face_landmark.cpp  face_landmark_impl.cpp  landmark_tracker.cpp
src/: main.cpp  wasm_bindings.cpp
web/: app.js  index.html
